public/css/styles.css
html {
  background-color: #E4E9FD;
  background: radial-gradient(50% 50% at 50% 50%, rgba(27, 56, 208, 0.8) 0%, rgba(29, 58, 208, 0.8) 0.01%, rgba(14, 42, 189, 0.8) 100%);
  min-height: 100vh;
  font-family: 'helvetica neue';
}

h1 {
  color: #fff;
  padding: 10px;
}

a {
  text-decoration: none;
  color: #0b3469;
  transition: .5s;
}

a:hover {
  color: #0b6cec;
  transition: .5s;
}

.logo {
  max-width: 400px;
  margin: 50px auto;
  padding-top: 10px;
  padding-bottom:10px;
  background: white;
  border-radius: 5px;
  box-shadow: 5px 5px 15px -5px rgba(0, 0, 0, 0.3);
  background: radial-gradient(50% 50% at 50% 50%, rgba(11, 52, 105, 0.8) 0%, rgba(11, 52, 105, 0.8) 0.01%, rgba(6, 48, 103, 0.8) 100%);
  border-radius: 10px;
  text-align: center;
  align-self: center;
}

.logo h1 {
  font-size: 100px;
  margin: 0px;
  padding: 0px;
}

.logo h2 {
  font-size: 40px;
  margin: 0;
  color: #E4E9FD;
  font-family: 'Great Vibes', cursive;
}

.box {
  max-width: 400px;
  margin: 50px auto;
  background: white;
  border-radius: 5px;
  box-shadow: 5px 5px 15px -5px rgba(0, 0, 0, 0.3);
}

.auth-box {
  max-width: 400px;
  margin: 50px auto;
  background: white;
  border-radius: 5px;
  box-shadow: 5px 5px 15px -5px rgba(0, 0, 0, 0.3);
  display: flex;
  flex-direction: column;
  align-items: center;
  text-align: center;
}

.flex-links {
  display: flex;
  justify-content: space-around;
  width: 90%;
}

#heading {
  background: radial-gradient(50% 50% at 50% 50%, rgba(11, 52, 105, 0.8) 0%, rgba(11, 52, 105, 0.8) 0.01%, rgba(6, 48, 103, 0.8) 100%);
  text-align: center;
}

.item {
  min-height: 70px;
  display: flex;
  align-items: center;
  border-bottom: 1px solid #F1F1F1;
}

.item:last-child {
  border-bottom: 0;
}

.form-group, .email-group {
  margin: 5px; 
}

.log-form {
  width: 90%;
  display: flex;
  flex-direction: column;
  align-items: flex-end;
}

.form-control {
  border-radius: 5px;
  font-size: 20px;
}

.list-name-creator {
  width:95%;
  display: none;
  height: 40px;
}

.list-name-creator-active {
  width:90%;
  display: flex;
  height: 40px;
}
 
.name-field {
  border-radius: 5px;
  font-size: 20px;
  width:100%;
}

.list-name-active {
  display: inline;
}

.error {
  border-radius: 10px;
  background-color: rgb(255, 110, 110);
  margin: 5px; 
}

.error p {
  color: #b40000;
}

.warning {
  border-radius: 10px;
  background-color: rgb(253, 255, 110);
  margin: 5px; 
}

.warning p {
  color: #b4b100;
}

.success {
  border-radius: 10px;
  background-color: rgb(110, 255, 129);
  margin: 5px; 
}

.success p {
  color: #39b400;
}

.button {
  background-color: #0b3469;
  padding: 10px;
  margin: 10px;
  color: #E4E9FD;
  font-size: 30px;
  cursor: pointer;
  border-radius: 10px;
  transition: .5s;
  align-self: center;
}

.button:hover {
  background-color: #0d59bd;
  transition: .5s;
}

label {
  font-size: 20px;
}

input:checked+p {
  text-decoration: line-through;
  text-decoration-color:rgb(88, 98, 235);
}

input[type="checkbox"] {
  margin: 20px;
}

p {
  margin: 0;
  padding: 20px;
  font-size: 20px;
  font-weight: 200;
  color: #00204a;
}

.list {
  background-color: #E4E9FD;
  border: 1px solid #5862EB;
  border-radius: 5px;
  transition: .5s;
}

.list:hover {
  box-shadow: 1px 1px 2px black;
  transition: .5s;
}

.list-section {
  border-radius: 10px;
  margin: 5px;
  width: 90%;
  height: 50%;
  display: grid;
  grid-template-columns: repeat(3, 1fr);
  grid-template-rows: repeat(auto-fit, 94px);
  gap: 5px;
}

.delete-button {
  margin:5px;
  border-radius: 2px;;
  background-color: #fa4141;
  color: whitesmoke;

}

form.item {
  text-align: center;
  margin-left: 20px;
}

button[name="listTitle"] {
  min-height: 30px;
  width: 50px;
  width: -moz-max-content;
  width: -webkit-max-content;
  width: -o-max-content;
  margin: 5px;
  border-radius: 5%;
  border-color: transparent;
  background-color: rgb(88, 98, 235);
  color: #fff;
  font-size: 40px;
  border-width: 0;
}

input[name="newItem"] {
  text-align: center;
  height: 60px;
  top: 10px;
  border: none;
  background: transparent;
  font-size: 20px;
  font-weight: 200;
  width: 313px;
}

input[name="newItem"]:focus {
  outline: none;
  box-shadow: inset 0 -3px 0 0 rgb(88, 98, 235);
}


.dashlink {
  text-align: center;
}

.dashlink a {
  color: #E4E9FD;
}

.dashlink a:hover {
  color: rgb(137, 142, 163);
}

::placeholder {
  color: grey;
  opacity: 1;
}

footer {
  color: white;
  color: rgba(0, 0, 0, 0.5);
  text-align: center;
}


@media only screen and (max-width: 600px) {
  label {
    font-size: 18px;
  }

  .form-control {
    border-radius: 5px;
    font-size: 18px;
  }

  .button {
    font-size: 22px;
    
  }
  button[name="listTitle"] {
    width: 40px;
  }

}

